Suspected fix for a tab image caching bug.

If we cache the same image for guest and incognito tabs, but they use different
themes, we'll have drawing glitches.

I can't reproduce the original problem, so I'm going to try landing this and see
if the reporter sees things clear up.

BUG=599077
TEST=See bug
TBR=estade

Review URL: https://codereview.chromium.org/1845813002

Cr-Commit-Position: refs/heads/master@{#384210}